# meeting_recorder

./: .gitattributes  .gitignore  README.md  applog.py  build.bat  config.py  detector.py  main.py  make_icon.py  pyproject.toml  recorder.py  toast.py
